Feature: my schedule api (#32)
* refactor code

* add my schedule api